# AudioVisualizer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  build-liunx.sh  build-windows.ps1
docs/: _audio_visualizer_8h_source.html  _bottom_bar_8h_source.html  _file_dialog_8h_source.html  _filename_helper_8h_source.html  _gui_element_8h_source.html  _sidebar_8h_source.html  _simple_f_f_t_8h_source.html  _slider_8h_source.html  _timeline_8h_source.html  _visuals_8h_source.html  annotated.html  annotated_dup.js  class_audio_visualizer-members.html  class_audio_visualizer.html  class_audio_visualizer.js  class_bottom_bar-members.html  class_bottom_bar.html  class_bottom_bar.js  class_file_dialog-members.html  class_file_dialog.html  class_filename_helper-members.html  class_filename_helper.html  class_gui_element-members.html  class_gui_element.html  class_gui_element.js  class_sidebar-members.html  class_sidebar.html  class_sidebar.js  class_simple_f_f_t-members.html  class_simple_f_f_t.html  class_slider-members.html  class_slider.html  class_slider.js  class_timeline-members.html  class_timeline.html  class_timeline.js  class_visuals-members.html  class_visuals.html  class_visuals.js  dir_09e761304027c904456130627fd4dcf5.html  (+16 more)
docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_3.js  classes_6.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  searchdata.js  variables_0.js  variables_3.js  variables_5.js  variables_6.js
html/: _file_dialog_8h_source.html  _filename_helper_8h_source.html  _sidebar_8h_source.html  _simple_f_f_t_8h_source.html  _slider_8h_source.html  annotated_dup.js  class_bottom_bar.html  class_file_dialog-members.html  class_gui_element-members.html  class_sidebar.html  class_simple_f_f_t-members.html  class_simple_f_f_t.html  class_timeline-members.html  class_timeline.html  class_visuals-members.html  classes.html  dir_09e761304027c904456130627fd4dcf5.js  dir_580fb20920df4cbf7b51defdb523d1a2.html  dir_9eba5461f2a1c6bff4e4232e00328bbe.html  doxygen_crawl.html  functions.html  functions_func.html  hierarchy.html  navtreeindex0.js
html/search/: all_1.js  all_2.js  all_7.js  classes_4.js  functions_2.js  searchdata.js  variables_1.js
includes/: AudioVisualizer.h  FileDialog.h  FilenameHelper.h
includes/GUI/: GuiElement.h  Sidebar.h  Slider.h  Timeline.h  Visuals.h
includes/GUI/bottomBar/: BottomBar.h
includes/GUI/slider/: Slider.h
src/: AudioVisualizer.cpp  BottomBar.cpp  FileDialog.cpp  Slider.cpp  main.cpp
src/GUI/: GuiElement.h
src/GUI/bottomBar/: BottomBar.h
